# ContextScope

./: .gitignore  README.md  context_scope_technical_report.docx  pyproject.toml  requirements.txt  run.py
app/: bootstrap.py  main.py  setup_wizard.py
config/: loader.py  paths.py  secrets.py
core/: app_controller.py  capture_service.py  llm_client.py  llm_worker.py  utility.py
core/capture/: capture_service.py  context_stream_worker.py
core/llm/: llm_client.py
core/ocr/: textract_ocr.py
core/tools/: __init__.py  tool_decorator.py  tool_registry.py
core/tools/atlassian/: __init__.py  jira_api.py
core/vector_db/: vector_store.py
integrations/: aws_textract.py  base.py  jira.py  manager.py  ollama.py  secret_store.py
prompts/: general_prompt.j2
setup/: reset_service.py  setup_service.py
ui/styles/: styles.qss
ui/windows/: base_window.py  capture_window.py  chat_window.py  text_window.py
